# seg-work

./: .gitignore  BoundingBox.h  CMakeLists.txt  MySegmentation.cu  MySegmentation.cuh  build.sh  config.toml  main.cpp  sample.py  segwork.cpp
cuda/: cudafuncs.cu  cudafuncs.cuh
dep/Mask_RCNN/mrcnn/: model.py
segm/: MySegmentation.cu  MySegmentation.cuh
segm/MaskRCNN/: MaskRCNN.cpp  MaskRCNN.h  MaskRCNN.py
util/: FrameData.h
